@@ -180,20 +180,20 @@ lazy val connect = (project in file("./connect"))
     scalaVersion := scala213,
     mainClass := Some("example.DeltaConnect"),
     libraryDependencies ++= Seq(
-      "io.delta" %% "delta-connect-client" % "4.0.0rc2",
-      "org.apache.spark" %% "spark-connect-client-jvm" % lookupSparkVersion.apply(
-        getMajorMinor("4.0.0rc2")
-      )
+      "io.delta" %% "delta-connect-client" % "4.0.0",
+      "org.apache.spark" %% "spark-connect-client-jvm" % "4.0.0"
     ),
     extraMavenRepo,
     resolvers ++= Seq(
       Resolver.mavenLocal,
       // TODO remove this once the Spark preview release has been finalized
-      "Apache Spark 4.0 (RC7) Staging" at "https://repository.apache.org/content/repositories/orgapachespark-1485/"
+      "Apache Spark 4.0 (RC7) Staging" at "https://repository.apache.org/content/repositories/orgapachespark-1485/",
+      "Delta" at "https://oss.sonatype.org/content/repositories/iodelta-1227"
     ),
     scalacOptions ++= Seq(
       "-deprecation",
       "-feature"
     ),
-    java17Settings
+    java17Settings,
+    javaOptions += "--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED"
   )
